<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FireDroid Policy Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_apk_list">AppList Demo</string>
    <string name="appicon">Application Icon</string>
    <string name="apkname">Application Name:</string>
    <string name="package_name">Package Name:</string>
    <string name="version">Version:</string>
    <string name="features">Required Features:</string>
    <string name="permissions">Required Permissions:</string>
    <string name="req_version">Taget SDK Version:</string>
    <string name="path_info">Path Info:</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed:</string>
    <string name="modified">Last Modified:</string>
    <string name="viewPolicies">View Policies</string>
    <string name="editPolicies">Edit Policies</string>
    <string name="viewPermissions">View Permissions</string>
    <string name="title_activity_permissions_view">PermissionsView</string>
    <string name="action_settings">Settings</string>
    <string name="application_name">Application Name</string>
    <string name="permission_name">Application with Permissions</string>
    <string name="title_activity_home">FireDroid Policy Management</string>
    <string name="PolicyMgmt">Firedroid Policy Management</string>
    <string name="PolicyType">List of allowed policies</string>
    <string name="title_activity_policy_instances">Policy Instances</string>
    <string name="title_activity_policy_type_definition">Defining Policy Types</string>
    <string name="Policies">Policies</string>
    <string name="policy_name_textview">Policy Name:</string>
    <string name="default_outcome_textview">Default Outcome:</string>
    <string name="priority_textview">Precedence of Priority:</string>
    <string name="edit_policy_type">Edit Policy Types</string>
    <string name="update_policy_type">Update Policy Type</string>
    <string name="delete_policy_type">Delete Policy Type</string>
    <string name="view_policy_type">View Policy Types</string>
    <string name="add_policy_type">Add Policy Type</string>
    <string name="default_outcome_prompt">Choose a Default Outcome</string>
    <string name="priority_prompt">Choose the Precedence of Priorities</string>
    <string name="ViewPolicyType">Stored Policy Types</string>
    <string name="PolicyTypeRecords">There are the policy types defined in the database!!!</string>
    <string name="BackToPolicyTypeList">Back!!!</string>
    <string name="Policy_Name_heading">Policy Name:</string>
    <string name="Policy_Type">Policy</string>
    <string name="Subject_heading">Subject:</string>
    <string name="Subject_name">Subject</string>
    <string name="Target_heading">Target:</string>
    <string name="Outcome_header">Outcome:</string>
    <string name="add_policy_instance">Add Policy Instance</string>
     <string name="ViewPolicyInstances">Stored Policy Instances :</string>
    <string name="ViewAppPolicyInstances">Stored Policy Instances for the App:</string>
    <string name="PolicyAppInstanceRecords">There are the list of stored policy instances for the app!!!</string>
    <string name="PolicyInstanceRecords">There are the list of stored policy instances!!!</string>
	<string name="update_policy_instance">Update Policy Instance</string>
	<string name="delete_policy_instance">Delete Policy Instance</string>
	<string name="password_prompt_instruction">Enter your password to proceed:</string>
    
    <string-array name="default_outcome_array">
        <item>Allow</item>
        <item>Kill</item>
        <item>Deny</item>
        <item>Ask User</item>
    </string-array>
    <string-array name="priority_array">
        <item>Allow->Deny->Ask->Kill</item>
        <item>Kill->Ask->Deny->Allow</item>
        <item>Kill->Deny->Allow->Ask</item>
        <item>Allow->Ask->Deny->Kill</item>
    </string-array>
    <string-array name="policy_types">
        <item>DNS</item>
        <item>IPC</item>
        <item>File I/O</item>
        <item>Network</item>
        <item>Shared Memory</item>
        <item>Dial</item>
    </string-array>

    <string name="title_activity_view_policy_types">ViewPolicyTypes</string>
    <string name="title_activity_edit_policy_types">EditPolicyTypes</string>
    <string name="title_activity_policy_types_list">PolicyTypesList</string>
    <string name="title_activity_view_policy_instances">ViewPolicyInstances</string>

</resources>